# chfs

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  lab1_521030910253.tgz  lab2_521030910253.tgz  lab3_521030910253.tgz  lab4_521030910253.tgz  mypasswd
build_support/: packages.sh  run_clang_format.py
daemons/: CMakeLists.txt
daemons/distributed/: CMakeLists.txt  consts.h  data.cc  main.cc  meta.cc
daemons/single_node_fs/: CMakeLists.txt  consts.h  logger.h  main.cc
docs/lab1/: lab1.md
docs/lab2/: lab2.html  lab2.md  librpc.md
docs/lab3/: raft.md
docs/lab4/: mr.md
scripts/lab1/: handin.sh  integration_test.sh  set-env.sh  start_fs.sh  stop_fs.sh  test-lab1-part2-b.pl  test-lab1-part2-c.pl  test-lab1-part2-d.sh  test-lab1-part2-e.sh
scripts/lab2/: docker-compose.yml  integration_test.sh  stop_fs.sh  test-lab2-part2-a.pl  test-lab2-part2-b.pl  test-lab2-part2-c.sh
scripts/lab2/data/: Dockerfile
scripts/lab2/fs_client/: Dockerfile
scripts/lab2/meta/: Dockerfile
scripts/lab4/: handin.sh
src/: CMakeLists.txt
src/block/: CMakeLists.txt  allocator.cc  manager.cc
src/distributed/: CMakeLists.txt  client.cc  commit_log.cc  dataserver.cc  metadata_server.cc
src/filesystem/: CMakeLists.txt  control_op.cc  data_op.cc  directory_op.cc
src/include/block/: allocator.h  manager.h
src/include/common/: bitmap.h  config.h  error_code.h  macros.h  result.h  util.h
src/include/distributed/: client.h  commit_log.h  dataserver.h  metadata_server.h
src/include/filesystem/: directory_op.h  operations.h
src/include/librpc/: client.h  server.h
src/include/map_reduce/: protocol.h
src/include/metadata/: inode.h  manager.h  superblock.h
src/include/rsm/: list_state_machine.h  state_machine.h
src/include/rsm/raft/: log.h  node.h  protocol.h
src/include/utils/: thread_pool.h
src/librpc/: CMakeLists.txt  client.cc  server.cc
src/map_reduce/: CMakeLists.txt  basic_mr.cc  mr_coordinator.cc  mr_sequential.cc  mr_worker.cc
src/metadata/: CMakeLists.txt  inode.cc  manager.cc  superblock.cc
stress-test/: CMakeLists.txt  allocator.cc  concurrent.cc
test/: CMakeLists.txt
test/basic/: bitmap_test.cc  hello_test.cc
test/block/: allocator_test.cc  manager_test.cc
test/distributed/: commit_log_test.cc  dataserver_test.cc  distributed_client_test.cc  metadata_server_test.cc  util_test.cc
test/filessytem/: basic_fs_test.cc  common.h  create_and_getattr_test.cc  directory_op_test.cc  indirect_file_write_test.cc  remove_test.cc
test/librpc/: client_test.cc  server_test.cc
test/map_reduce/: mr_test.cc
test/map_reduce/novels/: being_ernest.txt  tom_sawyer.txt
test/metadata/: inode_manager_test.cc  inode_test.cc  superblock_test.cc
test/rsm/: raft_test.cc  raft_test.h
